[package]
name = "common"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]