[package]
name = "merkle"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { path = "/home/manuel/Documents/M4/rust_playground/drop" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"