[package]
name = "rain"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { path = "/home/manuel/Documents/M4/rust_playground/drop" }
macros = { path = "/home/manuel/Documents/M4/rust_playground/drop/macros" }
merkle = { path = "../merkle" }
rain_wasi_common = { path = "../rules_playtest/rain_wasi_common" }
rain_wasmtime_contract = { path = "../rules_playtest/rain_wasmtime_contract" }
classic = { path = "/home/manuel/Documents/M4/rust_playground/classic" }
serde = "1.0.102"
tokio = "0.2.0"
futures = "0.3.4"
tracing = "0.1.13"
tracing-futures = "0.2.3"
bincode = "1.2.1"
log = "0.4"
base64 = "0.11.0"
rand = "0.7.3"

[dev-dependencies]
tracing-subscriber = "*"