[package]
name = "rain"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jit = []
cranelift = []
singlepass = []
llvm = []
native = []

[dependencies]
macros = { git = "https://github.com/Distributed-EPFL/drop", branch= "feature/io" }
merkle = { path = "../merkle" }
wasm_common_bindings = { path="common" }
rain_wasmtime_contract = { path = "../rules_playtest/rain_wasmtime_contract" }
serde = "1.0.102"
futures = "0.3.4"
tracing = "0.1.13"
tracing-futures = "0.2.3"
bincode = "1.3.1"
log = "0.4"
base64 = "0.11.0"
rand = "0.7.3"
tester = "0.7.0"
wasmer = "1.0.0-rc"
wasmer-compiler-llvm = "1.0.0-rc"
wasmer-compiler-singlepass = "1.0.0-rc"
wasmer-compiler-cranelift = "1.0.0-rc"
wasmer-engine-native = "1.0.0-rc1"
bls_amcl = "0.7.0"
hbbft = "0.1.1"
thiserror = "1.0.24"
tokio-stream = "0.1.4"

[dependencies.drop]
git = "https://github.com/Distributed-EPFL/drop"
branch = "feature/refactor"
features = ["net"]

[dependencies.tokio]
version = "1.3.0"
features = ["rt-multi-thread"]

[dev-dependencies]
tracing-subscriber = "*"
