[package]
name = "rules_parsing"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="common"}
#wasm-bindgen = "=0.2.54"
wasmtime-rust = "=0.11.0"
anyhow = "1.0.26"
bincode = "1.2.1"
base64 = "0.11.0"