[package]
name = "rules_parsing"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level="s"

[dependencies]
rain_wasi_common = { path="rain_wasi_common" }
rain_wasmtime_contract = { path="rain_wasmtime_contract" }
bincode = "1.2.1"
base64 = "0.11.0"