[package]
name = "wasm_interpretation_tests"
version = "0.1.0"
authors = ["mribeiro"]
edition = "2018"

[lib]
name = "wasm_interpretation_lib"
path = "src/lib.rs"

[[bin]]
name = "valgrind_test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.19.0"
wasmtime-wasi = "0.19.1"
# wasmtime-rust = "0.19.0"
anyhow = "1.0.32"
tester = "0.7.0"
parity-wasm = "0.41"
wasm3 = "0.1.1"