[package]
name = "wasm_interpretation_tests"
version = "0.1.0"
authors = ["mribeiro"]
edition = "2018"

[lib]
name = "wasm_interpretation_lib"
path = "src/lib.rs"

[[bin]]
name = "valgrind_test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.bench]
opt-level = 3

[dependencies]
tester = "0.7.0"
wasmer-runtime = "0.17.1"
wasmer-singlepass-backend = "0.17.1"
wasm_common_bindings = { path="common" }
bincode = "1.3.1"
