[package]
name = "wasm_interpretation_tests"
version = "0.1.0"
authors = ["mribeiro"]
edition = "2018"

[lib]
name = "wasm_interpretation_lib"
path = "src/lib.rs"

[[bin]]
name = "valgrind_test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.bench]
opt-level = 3

[features]
jit = []
cranelift = []
singlepass = []
llvm = []
native = []

[dependencies]
tester = "0.7.0"
wasmer-runtime = "0.17.1"
wasmer-singlepass-backend = "0.17.1"
wasm_common_bindings = { path="common" }
bincode = "1.3.1"
wasmer = "1.0.0-rc"
wasmer-compiler-llvm = "1.0.0-rc"
wasmer-compiler-singlepass = "1.0.0-rc"
wasmer-compiler-cranelift = "1.0.0-rc"
wasmer-engine-native = "1.0.0-rc1"
rand = "0.7.3"
wasmer-cache = "1.0.0-rc1"

[dependencies.ed25519-dalek]
version = "1.0.1"
features = ["serde"]