[package]
name = "contract_test"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true
opt-level = 3
panic = "abort"
debug = true

# [features]
# default = ["wee_alloc"]

[dependencies]
wasm_common_bindings = { path="../common" }
bincode = "1.3.1"
# wee_alloc = { version = "0.4.5", optional = true }
# wasm-bindgen = "=0.2.54"

