[package]
name = "contract_test"
version = "0.1.0"
authors = ["mvidigueira <mvidigueira@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level="s"
panic = "abort"
debug = false

#[features]
#default = ["wee_alloc"]

[dependencies]
#wee_alloc = { version = "0.4.5", optional = true }
# wasm-bindgen = "=0.2.54"
# bincode = "1.3.1"

